Implemented CORS validation

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -35,10 +35,24 @@ jwt.cache.claims.expire-after-write-minutes=20
 jwt.cache.user-details.max-size=20000
 jwt.cache.user-details.expire-after-write-minutes=20
 
-# CORS Configuration - Update with your production frontend URL
-cors.allowed-origins=http://localhost:3000,https://heartbound.net,https://www.heartbound.net
-cors.max-age=3600
+# Enhanced CORS Configuration - Production Security Settings
+cors.allowed-origins=
+cors.allowed-origins.production=https://app.heartbound.net,https://www.heartbound.net
+cors.allowed-origins.staging=
+cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin,X-CSRF-Token
+cors.exposed-headers=X-Rate-Limit-Remaining,X-Rate-Limit-Limit,X-Rate-Limit-Reset,X-Total-Count
+cors.max-age=7200
 cors.allow-credentials=true
+
+# CORS Origin Validation Configuration - Production (Strict)
+cors.origin.validation.enabled=true
+cors.origin.pattern.enabled=true
+cors.origin.patterns=https://*.heartbound.net
+
+# CORS Validation and Monitoring Configuration - Production (Strict)
+cors.validation.enabled=true
+cors.validation.max-rejections-per-hour=5
+cors.validation.alert-threshold=3
 
 # Production Logging Configuration
 logging.level.org.springframework.security=INFO
