--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,10 +23,24 @@ jwt.cache.claims.expire-after-write-minutes=15
 jwt.cache.user-details.max-size=10000
 jwt.cache.user-details.expire-after-write-minutes=15
 
-# CORS Configuration
-cors.allowed-origins=http://localhost:3000,https://heartbound.net
+# Enhanced CORS Configuration - Comprehensive Security Settings
+cors.allowed-origins=http://localhost:3000,http://localhost:5173
+cors.allowed-origins.production=https://app.heartbound.net,https://www.heartbound.net
+cors.allowed-origins.staging=https://staging.heartbound.com
+cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin,X-CSRF-Token
+cors.exposed-headers=X-Rate-Limit-Remaining,X-Rate-Limit-Limit,X-Rate-Limit-Reset,X-Total-Count
 cors.max-age=3600
 cors.allow-credentials=true
+
+# CORS Origin Validation Configuration
+cors.origin.validation.enabled=true
+cors.origin.pattern.enabled=true
+cors.origin.patterns=https://*.heartbound.net
+
+# CORS Validation and Monitoring Configuration
+cors.validation.enabled=true
+cors.validation.max-rejections-per-hour=10
+cors.validation.alert-threshold=5
 
 # Logging
 logging.level.org.springframework.security=DEBUG
