Fixing backends CORS configuraation

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -37,7 +37,7 @@ jwt.cache.user-details.expire-after-write-minutes=20
 
 # Enhanced CORS Configuration - Production Security Settings
 cors.allowed-origins=
-cors.allowed-origins.production=https://app.heartbound.net,https://www.heartbound.net
+cors.allowed-origins.production=https://app.heartbound.net,https://www.heartbound.net,https://heartbound.net
 cors.allowed-origins.staging=
 cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin,X-CSRF-Token
 cors.exposed-headers=X-Rate-Limit-Remaining,X-Rate-Limit-Limit,X-Rate-Limit-Reset,X-Total-Count
