--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -36,8 +36,8 @@ jwt.cache.user-details.max-size=20000
 jwt.cache.user-details.expire-after-write-minutes=20
 
 # Enhanced CORS Configuration - Production Security Settings
-cors.allowed-origins=
-cors.allowed-origins.production=https://app.heartbound.net,https://www.heartbound.net,https://heartbound.net
+cors.allowed-origins=https://www.heartbound.net,https://heartbound.net,https://heartbound-jet.vercel.app
+cors.allowed-origins.production=https://www.heartbound.net,https://heartbound.net,https://heartbound-jet.vercel.app
 cors.allowed-origins.staging=
 cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin,X-CSRF-Token
 cors.exposed-headers=X-Rate-Limit-Remaining,X-Rate-Limit-Limit,X-Rate-Limit-Reset,X-Total-Count
