Fish Command can only be used in the server now

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -91,6 +91,8 @@ cache.prison.expire-after-write-hours=72
 # Discord Bot Configuration
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
+# Guild ID where commands like /fish are allowed
+discord.main.guild.id=${DISCORD_MAIN_GUILD_ID}
 discord.category.id=${DISCORD_CATEGORY_ID}
 # Category for pairing channels (optional - will use root if not specified)
 discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
