--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -130,6 +130,8 @@ cache.giveaway.expire-after-write-minutes=10
 # Discord Bot Configuration (Values sourced from .env)
 discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
+# Guild ID where commands like /fish are allowed
+discord.main.guild.id=${DISCORD_MAIN_GUILD_ID}
 discord.category.id=${DISCORD_CATEGORY_ID}
 # Category for pairing channels (optional - will use root if not specified)
 discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
