--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -132,6 +132,7 @@ discord.token=${DISCORD_BOT_TOKEN}
 discord.server.id=${DISCORD_SERVER_ID}
 # Guild ID where commands like /fish are allowed
 discord.main.guild.id=${DISCORD_MAIN_GUILD_ID}
+discord.guild.id=1161658340418523166
 discord.category.id=${DISCORD_CATEGORY_ID}
 # Category for pairing channels (optional - will use root if not specified)
 discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
