Added cooldown for fishing - revert changes back if they don't work

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -217,3 +217,7 @@ roll.verification.pattern.window.hours=24
 roll.audit.enabled=true
 roll.audit.retention.days=90
 roll.audit.batch.size=100
+
+# Fishing Limit System Configuration
+fishing.max-catches=2
+fishing.cooldown-hours=6
