--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -221,3 +221,4 @@ roll.audit.batch.size=100
 # Fishing Limit System Configuration
 fishing.max-catches=500
 fishing.cooldown-hours=1
+fishing.limit-warning-threshold=0.6
