Implemented Flyway, New Migration Script, and TradeCommandListener changes

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -3,6 +3,10 @@ spring.security.oauth2.client.registration.fusionauth.client-id=
 spring.security.oauth2.client.registration.fusionauth.client-secret=
 spring.security.oauth2.client.provider.fusionauth.issuer-uri= 
 
+# Database and Migration settings for Development
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.enabled=true
+
 # Static Resources Configuration for development
 spring.web.resources.static-locations=classpath:/static/
 spring.mvc.static-path-pattern=/**
