--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -8,7 +8,15 @@ spring.datasource.url=jdbc:postgresql://${JDBC_DATABASE_URL}:${JDBC_PORT}/${JDBC
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+
+# Flyway configuration for Production
+# Baseline-on-migrate will create a baseline at the specified version
+# if the flyway schema history table does not exist.
+# This is crucial for introducing Flyway to an existing database.
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+
 
 # Connection Pool Settings - Enhanced for WebSocket Performance
 spring.datasource.hikari.maximum-pool-size=20
