--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,8 @@ server.servlet.context-path=/api
 spring.datasource.url=jdbc:postgresql://postgres:5432/heartbound
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.flyway.enabled=true
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:your_fallback_strong_access_secret_key_min_64_chars}
