Removed Hardcoded Fishing Limit, made dynamic and implemented into DiscordBotSettings - Added Penalty for hitting Fishing Limit

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,8 +4,10 @@ spring.security.oauth2.client.registration.fusionauth.client-secret=
 spring.security.oauth2.client.provider.fusionauth.issuer-uri= 
 
 # Database and Migration settings for Development
-spring.jpa.hibernate.ddl-auto=validate
-spring.flyway.enabled=true
+# Use 'update' to automatically create/update schema in development
+spring.jpa.hibernate.ddl-auto=update
+# Disable Flyway in development to allow auto schema updates
+spring.flyway.enabled=false
 
 # Static Resources Configuration for development
 spring.web.resources.static-locations=classpath:/static/
