--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,10 +12,10 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET:your_fallback_strong_access_secret_key_min_64_chars}
+jwt.secret=${JWT_SECRET}
 jwt.access-token-expiration-ms=900000
 jwt.refresh-token-expiration-ms=2592000000
-jwt.refresh-secret=${JWT_REFRESH_SECRET:your_fallback_strong_refresh_secret_key_min_64_chars_and_different}
+jwt.refresh-secret=${JWT_REFRESH_SECRET}
 
 # JWT Performance Caching Configuration
 jwt.cache.enabled=true
