Shop now stores in memory rather than caching

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -151,3 +151,6 @@ security.csp.enabled=true
 security.csp.report-only=false
 security.csp.report-uri=/api/security/csp-report
 security.headers.enabled=true
+
+# Daily Shop Configuration (Production)
+shop.daily.seed-salt=LpNq$t-V3z_B!d@*G-KaPdSgVkYp3s6v9y$B&E)H+MbQeThWmZq4t7w!z%C*F-Ja
