Implemented Heroku Configurations for appllication-dev

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -3,6 +3,12 @@ spring.security.oauth2.client.registration.fusionauth.client-id=
 spring.security.oauth2.client.registration.fusionauth.client-secret=
 spring.security.oauth2.client.provider.fusionauth.issuer-uri= 
 
+# Heroku PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://${JDBC_DATABASE_URL}:${JDBC_PORT}/${JDBC_DATABASE_NAME}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Database and Migration settings for Development
 # Use 'update' to automatically create/update schema in development
 spring.jpa.hibernate.ddl-auto=update
