Moved all of our important settings to application dev

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,26 +1,90 @@
-# Disable OAuth2 client auto-configuration
-spring.security.oauth2.client.registration.fusionauth.client-id=
-spring.security.oauth2.client.registration.fusionauth.client-secret=
-spring.security.oauth2.client.provider.fusionauth.issuer-uri= 
+# Database and Migration settings for a safe, shared Development environment
+# Use 'validate' to ensure code and DB schema match. Changes MUST be done via Flyway.
+spring.jpa.hibernate.ddl-auto=validate
+# Enable Flyway to manage database schema migrations automatically on startup.
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
 
-# Heroku PostgreSQL Configuration
+# Heroku PostgreSQL Configuration (uses Heroku-provided env vars)
 spring.datasource.url=jdbc:postgresql://${JDBC_DATABASE_URL}:${JDBC_PORT}/${JDBC_DATABASE_NAME}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Database and Migration settings for Development
-# Use 'update' to automatically create/update schema in development
-spring.jpa.hibernate.ddl-auto=update
-# Disable Flyway in development to allow auto schema updates
-spring.flyway.enabled=false
+# Connection Pool Settings for Dev
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=20000
 
-# Static Resources Configuration for development
-spring.web.resources.static-locations=classpath:/static/
-spring.mvc.static-path-pattern=/**
-# Disable cache for development to see changes immediately
-spring.web.resources.cache.period=0
-spring.web.resources.chain.cache=false 
+# JWT Configuration (uses Heroku-provided env vars)
+jwt.secret=${JWT_SECRET}
+jwt.access-token-expiration-ms=1800000 # 30 mins for dev
+jwt.refresh-token-expiration-ms=2592000000
+jwt.refresh-secret=${JWT_REFRESH_SECRET}
 
-# Adding Backend URL Environment Variable
-backend.base.url=http://localhost:8080/api 
+# CORS Configuration for Development
+# Should point to the Vercel staging/preview URL. Set via Heroku Config Var.
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS_DEV:http://localhost:3000,http://localhost:5173}
+cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin,X-CSRF-Token
+cors.exposed-headers=X-Rate-Limit-Remaining,X-Rate-Limit-Limit,X-Rate-Limit-Reset,X-Total-Count
+cors.max-age=3600
+cors.allow-credentials=true
+
+# Logging level for Development
+logging.level.org.springframework.security=DEBUG
+logging.level.com.app.heartbound=DEBUG
+logging.level.com.zgamelogic=DEBUG
+
+# Discord OAuth settings (uses Heroku-provided env vars)
+discord.client-id=${DISCORD_CLIENT_ID}
+discord.client-secret=${DISCORD_CLIENT_SECRET}
+# This MUST be set in Heroku to point to the backend's callback URL
+discord.redirect-uri=${DISCORD_REDIRECT_URI_DEV}
+discord.scopes=identify guilds.join guilds
+
+# URL Configuration (uses Heroku-provided env vars)
+frontend.base.url=${FRONTEND_URL_DEV:http://localhost:3000}
+backend.base.url=${BACKEND_URL_DEV:http://localhost:8080/api}
+
+# Rate Limiting Configuration for Dev (more lenient)
+rate.limit.max-requests=200
+rate.limit.window-minutes=1
+rate.limit.burst-capacity=250
+
+# --- OTHER SETTINGS ---
+# The following settings are copied from the base application.properties
+# to ensure the dev environment is fully configured.
+
+# Admin configuration
+admin.discord.id=${ADMIN_DISCORD_ID}
+
+# Discord Bot Configuration
+discord.token=${DISCORD_BOT_TOKEN}
+discord.server.id=${DISCORD_SERVER_ID}
+discord.main.guild.id=${DISCORD_MAIN_GUILD_ID}
+discord.guild.id=1161658340418523166
+discord.category.id=${DISCORD_CATEGORY_ID}
+discord.pairing.category.id=${DISCORD_PAIRING_CATEGORY_ID:1381698583178383502}
+discord.gateway-intents=GUILD_MEMBERS,GUILD_VOICE_STATES,MESSAGE_CONTENT
+
+# Chat Activity Rewards Configuration
+discord.activity.enabled=true
+discord.activity.credits-to-award=5
+discord.activity.message-threshold=5
+discord.activity.time-window-minutes=60
+discord.activity.cooldown-seconds=30
+discord.activity.min-message-length=15
+
+# Leveling System Configuration
+discord.leveling.enabled=true
+discord.leveling.xp-to-award=15
+discord.leveling.base-xp=100
+discord.leveling.level-multiplier=50
+discord.leveling.level-exponent=2
+discord.leveling.level-factor=5
+discord.leveling.credits-per-level=50
+discord.leveling.starter-role-id=1303106353014771773
+
+# HTML/CSS to Image API Configuration
+htmlcsstoimage.user_id=${HTML_CSS_TO_IMAGE_USER_ID}
+htmlcsstoimage.api_key=${HTML_CSS_TO_IMAGE_API_KEY} 
