Fixed Inline error in application dev

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ spring.datasource.hikari.connection-timeout=20000
 
 # JWT Configuration (uses Heroku-provided env vars)
 jwt.secret=${JWT_SECRET}
-jwt.access-token-expiration-ms=1800000 # 30 mins for dev
+jwt.access-token-expiration-ms=1800000
 jwt.refresh-token-expiration-ms=2592000000
 jwt.refresh-secret=${JWT_REFRESH_SECRET}
 
