Adjusted Procfile for more memory

--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: java -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:prod} -Dserver.port=$PORT $JAVA_OPTS -jar target/*.jar
+web: java -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:prod} -Dserver.port=$PORT -Xmx300m -Xms300m -XX:MaxMetaspaceSize=128m -jar target/*.jar
