--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -24,11 +24,14 @@ jwt.refresh-secret=${JWT_REFRESH_SECRET}
 
 # CORS Configuration for Development
 # Should point to the Vercel staging/preview URL. Set via Heroku Config Var.
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS_DEV:http://localhost:3000,http://localhost:5173}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS_DEV:http://localhost:3000,http://localhost:5173,https://heartbound-jet.vercel.app}
 cors.allowed-headers=Content-Type,Authorization,X-Requested-With,Accept,Origin,X-CSRF-Token
 cors.exposed-headers=X-Rate-Limit-Remaining,X-Rate-Limit-Limit,X-Rate-Limit-Reset,X-Total-Count
 cors.max-age=3600
 cors.allow-credentials=true
+
+# Add pattern for Vercel preview URLs
+cors.origin.patterns=https://heartbound-*.vercel.app,https://*.vercel.app
 
 # Logging level for Development
 logging.level.org.springframework.security=DEBUG
