Websocket Updates - need to fix main not connecting properly

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -55,7 +55,7 @@ cors.allow-credentials=true
 # CORS Origin Validation Configuration - Production (Strict)
 cors.origin.validation.enabled=true
 cors.origin.pattern.enabled=true
-cors.origin.patterns=https://*.heartbound.net
+cors.origin.patterns=https://*.heartbound.net,https://heartbound-*.vercel.app
 
 # CORS Validation and Monitoring Configuration - Production (Strict)
 cors.validation.enabled=true
