Increased Rate Limiting for Opening Cases and Shop Purchases

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -84,6 +84,15 @@ rate.limit.burst-capacity=100
 rate.limit.cleanup-interval-ms=3600000
 rate.limit.cache-maximum-size=100000
 
+# Enhanced Rate Limiting for Financial Endpoints - Production
+rate.limit.purchase.per-minute=12
+rate.limit.purchase.per-hour=50
+rate.limit.purchase.burst-capacity=15
+
+rate.limit.case-open.per-minute=20
+rate.limit.case-open.per-hour=80
+rate.limit.case-open.burst-capacity=25
+
 # Daily Message Activity Cache Configuration - Optimized for production
 cache.daily-activity.max-size=10000
 cache.daily-activity.expire-after-write-minutes=20
